--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,68 @@ button:hover {
 
 @media (max-width: 800px) {
   .container {
-      width: 100%;
-      padding: 0 1rem;
+    width: 100%;
+    padding: 0 1rem;
   }
+}
+
+.range-slider {
+  position: relative;
+  width: 100%;
+}
+
+.rs-range {
+  width: 100%;
+  height: 5px;
+  -webkit-appearance: none;
+  background: #e0e0e0;
+  outline: none;
+  overflow: hidden;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
+
+.rs-range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: #007bff;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: background 0.15s ease-in-out;
+}
+
+.rs-range:hover::-webkit-slider-thumb {
+  background: #0056b3;
+}
+
+.rs-range::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background: #007bff;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: background 0.15s ease-in-out;
+}
+
+.rs-range:hover::-moz-range-thumb {
+  background: #0056b3;
+}
+
+.rs-label {
+  position: absolute;
+  font-size: 14px;
+  color: #fff;
+  background: #007bff;
+  display: inline-block;
+  border-radius: 50%;
+  padding: 4px 8px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.box-minmax {
+  display: flex;
+  justify-content: space-between;
 }
