Trying to match Avenir Light font with Google fonts alternative

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Nunito Sans', sans-serif; /*Used before: Arial, sans-serif. This is Google fonts alternative to Avenir Light used in Wix*/
   margin: auto;
   padding: 1rem;
   overflow-x: hidden;
@@ -22,7 +22,7 @@ input, select {
 button {
   width: 100%;
   padding: 0.5rem;
-  background-color: #007bff;
+  background-color: black;  /*#007bff*/
   border: none;
   color: white;
   font-weight: bold;
@@ -30,7 +30,7 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: grey;  /*#0056b3*/
 }
 
 #result {
