--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+h2 {
+  font-family: 'Raleway', sans-serif;
+}
+
 body {
   font-family: 'Nunito Sans', sans-serif; /*Used before: Arial, sans-serif. This is Google fonts alternative to Avenir Light used in Wix*/
   margin: auto;
@@ -11,7 +15,7 @@ form {
 }
 
 label {
-  font-weight: bold;
+  /*Removed the font weight to match Wix's minimalist style*/
 }
 
 input, select {
@@ -20,12 +24,13 @@ input, select {
 }
 
 button {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.5em; /* 1.5 times bigger than the parent element's font size */
   width: 100%;
   padding: 0.5rem;
   background-color: black;  /*#007bff*/
   border: none;
   color: white;
-  font-weight: bold;
   cursor: pointer;
 }
 
