Some style matching

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,37 @@ label {
 input, select {
   width: 100%;
   box-sizing: border-box;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #000; /* You can change the color and thickness of the line */
+  outline: none;
+  box-shadow: none;
+}
+
+/* Add this to style the dropdown arrow of the select element */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 10l5 5 5-5H7z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 0.5em center;
+  padding-right: 1.5em;
+}
+
+/* This is needed to remove the default dropdown arrow on IE */
+select::-ms-expand {
+  display: none;
+}
+
+
+input[type="text"],
+input[type="number"] {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #000; /* You can change the color and thickness of the line */
+  outline: none;
+  box-shadow: none;
 }
 
 button {
